# ramdocs-rag

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: deploy.yml
data/: ramdocs_subset.json
demo/: .env.example  .gitignore  README.md
demo/.github/workflows/: deploy.yml
demo/backend/: pyproject.toml
demo/backend/src/demo_api/: main.py
demo/deploy/: caddy.snippet  install.sh  ramdocs-rag-demo.service
demo/frontend/: app.js  index.html  style.css
docs/: architecture.md
docs/journal/: architecture_study.html  index.html  journal.html  journal_full_bundle.html  style.css
docs/journal/versions/: v1.0_madam_lite.html  v2.0_entity_first.html  v3_skeptic.html  v4.0_evidence_quality.html  v4.1_promptfix.html
runs/: _WIP.md  _journal.md
runs/_baseline/: v1.0_madam_lite.json  v2.0_entity_first.json  v3.0_skeptic.json  v3.1_conservative_skeptic.json  v3.2_skeptic_balanced.json  v3.3_analyzer_tuned.json  v4.0_evidence_quality.json  v4.1_promptfix.json
src/ramdocs_rag/: __init__.py
src/ramdocs_rag/core/: __init__.py  dataset.py  llm.py  pricing.py  retrieval.py  safety.py  trace.py  types.py
src/ramdocs_rag/eval/: __init__.py  agent_probe.py  compare.py  metrics.py  runner.py
src/ramdocs_rag/pipelines/: base.py  (+2 more)
tests/: conftest.py
tests/integration/: test_safety_behaviour.py  test_v1_pipeline.py  test_v2_pipeline.py  test_v3_pipeline.py  test_v4_pipeline.py
tests/unit/: test_dataset.py  test_metrics.py  test_mock_llm.py  test_safety.py  test_v1_conflict_reliability.py  test_v2_grouping.py
(+46 files in other folders)
