[project]
name = "demo-api"
version = "0.1.0"
description = "Thin FastAPI facade over ramdocs-rag for the evaluation UI."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
